--- a/css/style.css
+++ b/css/style.css
@@ -20,11 +20,78 @@
     margin: 0 4px;
 }
 
+.product {
+    position: relative;
+}
+
+.product img {
+    width: 100%;
+}
+
+.product .product-heart {
+    position: absolute;
+    right: 0;
+    top: 20px;
+    background-color: white;
+    width: 30px;
+    height: 30px;
+    line-height: 32px;
+    text-align: center;
+}
+
+.product .product-details {
+    position: absolute;
+    left: 0;
+    bottom: 20px;
+}
+
+.product-discount, .product-green {
+    display: inline-block;
+}
+
+h2 {
+    text-transform: uppercase;
+    font-size: 12px;
+}
+
 /* container */
 
 .container {
     width: 1000px;
     margin: 10px auto;
-    background-color: blue;
 }
 
+/* product details  */
+
+.product-discount {
+    background-color: #eb0037;
+}
+
+.product-green {
+    background-color: #00875a;
+}
+
+.product-discount, .product-green {
+    color: white;
+    font-size: 10px;
+    padding: 3px;
+    font-weight: bold;
+}
+
+/* product info  */
+
+.product-info {
+    width: 50%;
+    font-size: 10px;
+}
+
+/* product price  */
+
+.discounted-price {
+    color: red;
+    font-weight: bold;
+}
+
+.real-price {
+    text-decoration: line-through;
+}
