--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,10 @@
 
 /* common */
 
+body {
+    font-family: 'Roboto', sans-serif;
+}
+
 .clearfix::after {
     display: block;
     content: "";
@@ -39,7 +43,7 @@
     text-align: center;
 }
 
-.product .product-details {
+.product .product-tag {
     position: absolute;
     left: 0;
     bottom: 20px;
@@ -49,9 +53,15 @@
     display: inline-block;
 }
 
-h2 {
+.row {
+    margin-bottom: 30px;
+}
+
+/* titoli  */
+
+h4 {
     text-transform: uppercase;
-    font-size: 12px;
+    font-size: small;
 }
 
 /* container */
@@ -80,14 +90,11 @@ h2 {
 
 /* product info  */
 
-.product-info {
-    width: 50%;
+.product-info span, p {
     font-size: 10px;
 }
 
-/* product price  */
-
-.discounted-price {
+.actual-price {
     color: red;
     font-weight: bold;
 }
